--- a/style.css
+++ b/style.css
@@ -38,3 +38,11 @@ textarea, input {
   font-weight: bold;
   margin: 40px 0;
 }
+
+.name-field {
+  width: 100%;
+  padding: 10px;
+  margin: 8px 0;
+  border-radius: 8px;
+  border: 1px solid #ccc;
+}
